# magnet_search

./: .gitignore  LICENSE  README.md  monitor.sh  pyproject.toml  restart.sh  transfer.sh
docs/: custom-provider-development.md  qbittorrent-setup.md
docs/superpowers/plans/: 2026-05-14-magnet-search-cli.md  2026-05-15-custom-provider-development-guide.md  2026-05-15-download-and-s3-upload.md  2026-05-15-download-upload-concurrency.md  2026-05-15-torrent-file-download-support.md  2026-05-15-unified-search-command.md  2026-05-15-verbose-command-logging.md  2026-05-18-transfer-cache-storage.md  2026-05-19-qbittorrent-seed-priority-scheduler.md
docs/superpowers/specs/: 2026-05-14-magnet-search-cli-design.md  2026-05-15-custom-provider-development-guide-design.md  2026-05-15-download-and-s3-upload-design.md  2026-05-15-download-upload-concurrency-design.md  2026-05-15-torrent-file-download-support-design.md  2026-05-15-unified-search-command-design.md  2026-05-15-verbose-command-logging-design.md  2026-05-18-transfer-cache-storage-design.md  2026-05-19-qbittorrent-seed-priority-scheduler-design.md  2026-05-19-runtime-metrics-design.md
src/magnet_search/: batch.py  cli.py  config.py  download.py  metrics.py  models.py  qbittorrent.py  ranking.py  storage.py  torrent.py
src/magnet_search/providers/: base.py  configurable.py  manager.py  (+1 more)
tests/: test_batch.py  test_cli.py  test_configurable_provider.py  test_download.py  test_internet_archive_provider.py  test_metrics.py  test_provider_manager.py  test_qbittorrent.py  test_ranking.py  test_storage.py  test_torrent.py
