[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnet-search"
version = "0.1.0"
description = "CLI tool for searching legal/public magnet resources and user-configured providers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
magnet-search = "magnet_search.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
